fixes for copilot review of 01/03
Signed-off-by: Laurent Arnal <laurent@clae.net>